# coati-payroll

./: .coverage_regular.json  .coverage_validation.json  .dockerignore  .env.example  .flake8  .gitignore  .replit  CHANGELOG.md  Dockerfile  README.md  RESUMEN_PRUEBAS.md  SOCIAL_CONTRACT.md  VERIFICATION_REPORT.md  app.py  babel.cfg  development.txt  docker-compose.yml  docker-entrypoint.sh  docs.txt  mkdocs.yml  package-lock.json  pyproject.toml  pytest.ini  replit.md  requirements.txt  test.txt  validate_nicaragua_ir.py
.github/: copilot-instructions.md
.github/workflows/: pypi.yml  python-package.yml  release-validation.yml
attached_assets/: Pasted--Fila-Origen-C-lculo-Pasos--1766333634178_1766333634178.txt  Pasted--Mes-Ordinario-Horas-Extra-Comisiones-Ingreso-Ordinario_1766333495899.txt  Pasted-JavaScript-Syntax-Error-The-error-Uncaught-SyntaxError-_1769878215816.txt  Pasted-import-pytest-from-coati-payroll-utils-locales-nicaragu_1766336257894.txt
coati-payroll-plugin-nicaragua/: README.md  pyproject.toml
coati-payroll-plugin-nicaragua/coati_payroll_plugin_nicaragua/: __init__.py  validate_nicaragua_examples.py
coati-payroll-plugin-nicaragua/coati_payroll_plugin_nicaragua/templates/nicaragua/: documentacion.html  index.html
coati-payroll-plugin-nicaragua/scripts/: reporte_validacion_nicaragua.py  validar_ejemplos_nicaragua.py
coati-payroll-plugin-nicaragua/tests/: test_nicaragua_examples.py  test_nicaragua_flask_client_integration.py  test_nicaragua_ir_calculation.py  test_nicaragua_json_validation.py
coati_payroll/: __init__.py  absence_defaults.py  app.py  audit_helpers.py  auth.py  cli.py  config.py  demo_data.py  enums.py  forms.py  formula_engine.py  formula_engine_examples.py  i18n.py  initial_data.py  interes_engine.py  locale_config.py  log.py  model.py  nomina_engine.py  plugin_manager.py  rate_limiting.py  rbac.py  report_engine.py  report_export.py  schema_validator.py  security.py  system_reports.py  vacation_service.py  version.py  wsgi_server.py
coati_payroll/formula_engine/: __init__.py  data_sources.py  engine.py  exceptions.py  novelty_codes.py
coati_payroll/liquidacion_engine/: __init__.py  engine.py
coati_payroll/migrations/: 20260125_032900_initial_migration.py  20260212_120000_add_paid_vacation_policy_fields.py  20260212_130000_add_planilla_vacation_policy_fk.py  20260221_120000_empresa_salario_accounts.py  __init__.py
coati_payroll/nomina_engine/: __init__.py  engine.py
coati_payroll/queue/: README.md  __init__.py  driver.py  selector.py  tasks.py
coati_payroll/static/: offline.html  schema_editor.js  styles.css  sw.js
coati_payroll/templates/: base.html  index.html  macros.html
coati_payroll/vistas/: __init__.py  calculation_rule.py  carga_inicial_prestacion.py  config_calculos.py  configuracion.py  constants.py  currency.py  custom_field.py  employee.py  empresa.py  exchange_rate.py  implementation.py  implementation_helpers.py  liquidacion.py  nomina.py  payroll_concepts.py  planilla.py  plugins.py  prestacion.py  prestamo.py  report.py  settings.py  tipo_planilla.py  user.py  vacation.py
dev/: README.md  lang.sh  lint.sh  run.sh  test_fast.sh  test_full.sh
docs/: AUDIT_GOVERNANCE_SYSTEM.md  CARGA_SALDOS_INICIALES.md  DATA_GOVERNANCE.md  FLASK_ALEMBIC_IMPLEMENTATION.md  INTERNATIONALIZATION.md  RECALCULATION_CONSISTENCY.md  RESUMEN_AUDITORIA_SEGURIDAD.md  SECURITY_AUDIT.md  SECURITY_IMPROVEMENTS.md  TRANSLATIONS.md  automated-backups.md  background-payroll-processing.md  database-agnostic-implementation.md  database-compatibility.md  flask-alembic-usage.md  index.md  modulo-vacaciones.md  plantilla-excel-novedades.md  queue_example.py  queue_system.md  rbac.md  sistema-inasistencias.md  test-coverage.md
docs/guia/: campos-personalizados.md  configuracion-calculos.md  configuracion-contable.md  deducciones.md  empleados.md  empresas.md  inicio-rapido.md  monedas.md  nomina.md  percepciones.md  planillas.md  plugins.md  prestaciones.md  prestamos.md  primeros-pasos.md  reglas-calculo.md  usuarios.md  vacaciones.md
docs/instalacion/: configuracion.md  instalacion.md  requisitos.md
docs/local_guides/: README.md  nicaragua-implementacion-tecnica.md  nicaragua-ir-paso-a-paso.md  nicaragua.md
docs/referencia/: faq.md  glosario.md  (+1 more)
nginx/: README.md  init-letsencrypt.sh  nginx.conf
scripts/: verificar_calculo_ejemplo2.py
systemd/: README.md  coati-payroll-worker.service  coati-payroll.service
tests/: README.md  __init__.py  conftest.py  test_accounting_voucher_e2e.py  test_alembic_migrations.py  test_app.py  test_ast_security.py  test_ast_visitor.py  test_audit_helpers.py  test_auth.py  test_background_payroll.py  test_calculation_rule_crud.py  test_cli.py  test_config.py  test_configuracion.py  test_currency.py  test_custom_field.py  test_database_compatibility.py  test_database_url_correction.py  test_e2e_validation.py  test_employee_crud.py  test_empresa.py  test_empresa_crud.py  test_enums.py  test_exchange_rate_crud.py  test_exchange_rate_filters.py  test_exchange_rate_import.py  test_formula_engine.py  test_getting_started_guide.py  test_i18n.py  test_initial_data.py  test_initial_data_ready_payrolls.py  test_locale_config.py  test_log.py  test_model.py  test_monthly_accumulated_salary.py  test_nicaragua_examples.py  test_nomina_engine.py  test_novedades_calculation.py  test_pay_period_calculation.py  (+15 more)
(+313 files in other folders)
