[project]
name = "coati-payroll"
requires-python = ">= 3.11"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
dynamic = ["version", "dependencies"]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "coati_payroll.version.__version__"}
